# ft_ls

./: .gitignore  CMakeLists.txt  Makefile  README.md  a_test.sh  err-log-ls.txt  ft_ls  ft_ls.test.sh  implementation.md  ls.txt  main.c  mindMap.puml  my.txt  note.md  readme.md  render.sh  test.sh
Note/: Information.md
file/: CMakeLists.txt  main.c  utils.ls.c
file/includes/: all_includes.h  ft_ls.h  ft_ls_includes.h
file/src/: ft_ls_array.c  ft_ls_build_array.c  ft_ls_extract.c  ft_ls_file_information.c  ft_ls_fill_lslink.c  ft_ls_handle_stat.c  ft_ls_lstat_extracting.c  ft_ls_main.c  ft_ls_print.c  ft_ls_print_stat.c  ft_ls_sorting.c  utils.ls.c
file/src/src_2/: ft_ls_handle_stat.c  ft_ls_main_2.c  ft_ls_print_2.c  utils.c
ft-ls-test/: 2  ft_ls
includes/: ft_ls..h  ft_ls.define.h  ft_ls.h  ft_ls.prototypes.h  ft_ls.struct.h
render/: Makefile  ft_ls
render/includes/: ft_ls.build_files.h  ft_ls.h  ft_ls.prototypes.h
render/src/: ft_ls.catch_options.c  ft_ls.handle_files_array.c  ft_ls.parser.c  ft_ls.print.c  main.c
src/: CMakeLists.txt  ft_ls..c  ft_ls.build_array_directory.c  ft_ls.build_array_directory.utils.c  ft_ls.build_dir_array.c  ft_ls.build_dir_array.h  ft_ls.build_dir_array.utils_1.c  ft_ls.build_dir_array.utils_2.c  ft_ls.build_dir_array.utils_3.c  ft_ls.build_files.c  ft_ls.build_files.h  ft_ls.build_files.utils_0.c  ft_ls.build_files.utils_1.c  ft_ls.build_files.utils_2.c  ft_ls.c  ft_ls.catch_options.c  ft_ls.file_attribute.c  ft_ls.fill_t_file.c  ft_ls.generate_files_array.add_size_uid_guid_name_link.c  ft_ls.generate_files_array.add_type_rigth_acl_hardlink.c  ft_ls.generate_files_array.c  ft_ls.generate_files_array.sort$param_time_max$length.c  ft_ls.generate_files_array.sort_param_time_max_length.c  ft_ls.generate_files_array.utils_2.c  ft_ls.generate_files_array.utils_3.c  ft_ls.get_file_information.c  ft_ls.get_file_stats.c  ft_ls.handle_files_array.c  ft_ls.init.c  ft_ls.parser.c  ft_ls.parsing.c  ft_ls.parsing.utils.c  ft_ls.print.c  ft_ls.utlis.c  ft_ls_handle_stat.c  ft_ls_main.c  ft_ls_print.c  ft_ls_print_stat.c  ft_ls_sorting.c  main.c  (+1 more)
test/: addition-test.bats  all_test.c  b  bonus_u_S_c_n_o_T.bats  error.bats  ft_ls  ft_ls.argv.bats  ft_ls.bats  ft_ls_test  hyphen.bats  long_format.bats  main.test.c  main.test_2.c  recursive.bats  recursive_time_long_all.bats  test.sh  test_main.c
test.c.dir/: ft_ls.build_dir_array.test.c  ft_ls.catch_option.test.c  ft_ls.ls.test.c  ft_ls.main.test.c  ft_ls.parser.test.c  ft_ls.print.test.c
test/libs/: utils.bash
test/test/: a  b  ft_ls
test/test/DIR_2/: file_1
test/test/dir_1/: file_a1  file_a3  file_a4
test/test/dir_1/-1/-2/-3/: file_4  file_5
test/tmp/: ft_ls
test/tmp/dir_1/: file_1  file_2
test_dir_clion/toto/: a  b
test_ft_ls_adpusel/tests/: 1  bonus_u_S_c_n_o_T.bats  diff_ft  error.sh  recursive_time_long_all.bats
tests/: ft_ls.build_dir_array.test.c  ft_ls.catch_option.test.c  ft_ls.get_dir_array.test.c  ft_ls.ls.test.c  ft_ls.main.test.c  ft_ls.parser.test.c  ft_ls.parsing.test.c  ft_ls.print.test.c
